End implementation Spring Security

--- a/src/main/resources/static/error/404.html
+++ b/src/main/resources/static/error/404.html
@@ -5,6 +5,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-	Error 403 : You have not the privileges to access this page
+	Error 404 : Not found
 </body>
 </html>
